# dreamshepherd.github.io

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: nextjs.yml
src/: styles.css
src/components/: Header.js  Layout.js  LinkList.js  NoLinkList.js  QuickLinks.js
src/content/dreaming/: 2026-03  2026-03Teaching Music.md  music_education.md
src/content/dreaming/2003-09/: latex-test.md
src/content/dreaming/2026-02/: cope-and-annui.md  cope-and-ennui.md  red-queens-race.md  zhuangzi.md
src/content/dreaming/coursework/CS 4414/hw1/: main  main.cpp  myFile
src/content/dreaming/coursework/CS 4414/hw4/: CMakeCache.txt  CMakeLists.txt  Makefile  bignum  bignum.cpp  bignum.hpp  cmake_install.cmake  main.cpp  threadpool.cpp  threadpool.hpp
src/content/dreaming/coursework/CS 4414/hw4 v2/: CMakeCache.txt  Makefile  bignum  bignum.cpp  main.cpp  (+2 more)
src/content/dreaming/coursework/ECE 5360/: Chapter 2.md  ECE 5360 HW 7 - Line chart 1 - Line.csv  Quantum Mechanics Derivation of Shottky-Mott Diode Equation.md  dmode.in  grading.txt  grading_linear.txt  grading_linear_out.txt  grading_linear_status.txt  grading_out.txt  grading_status.txt  hemtex2.in  plot.py  plot2.py  spectrum 50mA OD3.txt  spectrum_30mA.txt  work.py
src/lib/: dreaming.js
src/pages/: 404.js  _app.js  index.js
src/pages/arts/: index.js
src/pages/creative/: index.js
src/pages/dreaming/: [...slug].js  index.js
src/pages/projects/: index.js  projects.yaml
src/pages/random/: index.js
src/pages/resume/: index.js
src/pages/secret/: index.js
(+156 files in other folders)
